<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2023 PixelBuildsRom
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources>
    <string name="app_name">PixelBuilds Wallpapers</string>

    <string name="pb_walls">PixelBuilds</string>
    
    <!-- Wallpapers by Icarusap -->
    <string name="author_1">by Icarusap</string>
    <string name="wallpaper_jade_tiles">Jade Tiles</string>
    <string name="wallpaper_malachite_tiles">Malachite Tiles</string>
    <string name="wallpaper_pearl_tiles">Pearl Tiles</string>
    <string name="wallpaper_dark_tiles">Dark Tiles</string>
    <string name="wallpaper_emerald_vortex">Emerald Vortex</string>
    <string name="wallpaper_forest_vortex">Forest Vortex</string>
    <string name="wallpaper_porcelain_vortex">Porcelain Vortex</string>
    <string name="wallpaper_obsidian_vortex">Obsidian Vortex</string>
</resources>
